2.0.1 Rails 6 support for Pry
2.0.0 Rails 6 support
1.2.1 Less hacky railtie
1.2.0 Add ability to customize app name in prompt via ENV