@@ -1,3 +1,4 @@
+Unreleased Use Pry::Prompt API for Pry 0.13.0+
 2.0.1 Rails 6 support for Pry
 2.0.0 Rails 6 support
 1.2.1 Less hacky railtie
